# rss-feed-aggregator

./: .env  .gitignore  README.md  docker-compose.yml  spec.yaml
frontend_rss_feed/: .env.production  package-lock.json  package.json
frontend_rss_feed/src/: App.js  Router.js  env.js  index.js
frontend_rss_feed/src/actions/: ajax.js  feed-actions.js  feed-search-actions.js  http-actions.js
frontend_rss_feed/src/apis/: rest.api.js
frontend_rss_feed/src/assets/feeds/: comics.json  finance.json  media.json  music.json  pharma.json  running.json  security.json  tech.json
frontend_rss_feed/src/assets/icons/components/: Hamburger.js  ListIcon.js  PlusIcon.js  RefreshIcon.js
frontend_rss_feed/src/auth/: Auth.js
frontend_rss_feed/src/components/: AddFeed.js  App.js  ArticleCard.js  Auth.js  Dashboard.js  FeedExplore.js  Heading.js  Login.js  Modal.js  Navbar.js  Register.js  Router.js  SearchCard.js
frontend_rss_feed/src/components/common/: Button.js  Container.js  Heading.js  Input.js
frontend_rss_feed/src/components/styles/: Articles.js  Body.js  Button.js  ButtonLink.js  Card.js  Container.js  Dropdown.js  Form.js  GridContainer.js  Heading.js  Nav.js
frontend_rss_feed/src/css/: select.css  style.css
frontend_rss_feed/src/error/: AuthError.js
frontend_rss_feed/src/hooks/: useDataApi.js  useFeed.js  useFeedExplore.js  useFeedSearch.js
frontend_rss_feed/src/reducers/: dataFetchReducer.js  exploreFeedReducer.js  feedReducer.js  feedSearchReducer.js
migrations/: 20201105044155_create_register_table.sql
service-rss-feed/: .env  Cargo.toml  Dockerfile  Rocket.toml  configuration.yaml  sqlx-data.json
service-rss-feed/configuration/: base.yaml  production.yaml
service-rss-feed/migrations/2020-11-02-020852_rss_feed/: down.sql  up.sql
service-rss-feed/scripts/: init_db.sh
service-rss-feed/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
service-rss-feed/src/data/: models.rs  schema.rs
service-rss-feed/src/routes/: register.rs
service-rss-feed/tests/: health_check.rs
service_rss_feed/: Cargo.toml
service_rss_feed/configuration/: base.yaml  local.yaml
service_rss_feed/migrations/: 20201105044155_create_register_table.sql  20201108183539_create_rss_feed.sql  20201108223323_create_subscription.sql
service_rss_feed/scripts/: init_redis.sh
service_rss_feed/src/: configuration.rs  lib.rs  startup.rs
service_rss_feed/src/api/: login_form.rs  mod.rs  rss_form.rs  user_feed.rs  user_session.rs
service_rss_feed/src/data/: mod.rs  profile.rs  rss_feed.rs  subscription.rs
service_rss_feed/src/routes/: check_session.rs  get_feed.rs  login.rs  mod.rs  register.rs  return_feed.rs  rss_feed.rs  save_feed.rs  search_feed.rs
service_rss_feed/tests/: health_check.rs
src/: main.rs
tests/: health_check.rs
