[package]
name = "service-rss-feed"
version = "0.1.0"
authors = ["jsen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Web framework
rocket = "0.4.5"
rocket_codegen = "0.4.5"

# ORM
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }

# Env variable support 
dotenv = "0.15.0"

# Serialization / Deserialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# UUID support 
uuid = { version = "0.8", features = ["serde", "v5"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]