[package]
name = "service_rss_feed"
version = "0.1.0"
authors = ["J. Senecal <jacobsenecal@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
