[package]
name = "service_rss_feed"
version = "0.1.0"
authors = ["J. Senecal <jacobsenecal@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "service_rss_feed"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
config = "0.10.1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = "0.1.21"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-futures = "0.2.4"
tracing-bunyan-formatter = "0.1.6"
tracing-log = "0.1.1"
tracing-actix-web = "0.2.1"

[dev-dependencies]
lazy_static = "1.4.0"
reqwest = "0.10.8"
tokio = "0.2.22"
